--- a/composer.json
+++ b/composer.json
@@ -18,7 +18,7 @@
         "twig/twig": "1.*",
         "vlucas/valitron": "^1.2",
         "palanik/corsslim": "^1.1",
-        "nojimage/twitter-text-php": "dev-develop",
+        "nojimage/twitter-text-php": "^1.14.2",
         "j4mie/idiorm": "^1.5",
         "illuminate/database": "^5.4",
         "wixel/gump": "^1.4",
